XWIKI-11786: Use the new Mail Sender API for the Share Page By Mail feature XWIKI-12112: Add ability to share a page by email with groups of users
Initial commit. What remains to be done:
- Handle better the Email field
- Improve the functional test to click on the suggestion + verify that the selected elements are listed

--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
@@ -1069,15 +1069,16 @@ core.viewers.jump.suggest.noResults=No documents found
 
 core.viewers.share.title=Share <a href="{1}">{0}</a> by email
 core.viewers.share.error.mustLogin=You must be logged in to use this feature
-core.viewers.share.error.serverError=email server error
 core.viewers.share.error.unknownEmail=unknown email address
-core.viewers.share.error.missingRecipient=Please enter the recipient
-core.viewers.share.send.success=The message has been sent to {0}.
-core.viewers.share.send.error=The message could not be sent to {0}: {1}.
+core.viewers.share.error.missingRecipient=Please enter some recipients
+core.viewers.share.send.processing=The page is being sent asynchronously to all specified recipients.
+core.viewers.share.send.failure=The page could not be sent to the specified recipients.
 core.viewers.share.send.back=\u00AB Go back to the {0} document
 core.viewers.share.dialogTitle=Share this page
 core.viewers.share.target=Send to
-core.viewers.share.target.hint=XWiki user or email address
+core.viewers.share.target.user.hint=XWiki User names
+core.viewers.share.target.group.hint=XWiki Group names
+core.viewers.share.target.emails.hint=Email addresses
 core.viewers.share.target.ccMe=Send me a copy
 core.viewers.share.includeMethod=Include the current document
 core.viewers.share.includeMethod.link=Only as a link
@@ -4944,6 +4945,15 @@ core.viewers.diff.metadata.language=Language
 core.viewers.diff.metadata.name=Name
 core.viewers.diff.metadata.web=Space
 core.viewers.diff.metadata.space=Space
+
+#######################################
+## until 7.1
+#######################################
+
+core.viewers.share.send.success=The message has been sent to {0}.
+core.viewers.share.send.error=The message could not be sent to {0}: {1}.
+core.viewers.share.error.serverError=email server error
+core.viewers.share.target.hint=XWiki user or email address
 
 ## Used to indicate where deprecated keys end
 #@deprecatedend
