XWIKI-12164: Make the Extension History available when the wiki is empty * Allow the users to access the Extension History from the Distribution Wizard.

--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
@@ -3855,6 +3855,8 @@ platform.extension.distributionWizard.unknownStepError=Unknown step
 platform.extension.distributionWizard.continueLabel=Continue
 platform.extension.distributionWizard.skipLabel=Later
 platform.extension.distributionWizard.skipHint=Ask me again after XWiki is restarted
+platform.extension.distributionWizard.replayLabel=Replay recorded actions
+platform.extension.distributionWizard.replayHint=Upload an extension history file and replay the recorded actions
 platform.extension.distributionWizard.cancelLabel=Never
 platform.extension.distributionWizard.cancelHint=I can do this by myself, I don't want to use the wizard
 platform.extension.distributionWizard.cancelConfirmation=Are you sure you don't want to use the wizard? If you don't know how to do this by yourself then you should continue with the wizard. You won't be able to get back the wizard easily otherwise.
