CKEDITOR-6: Edit-Button is there but editor does not show up * Requires XWIKI-10881 which has been fixed in 7.1-milestone-1

--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
   <parent>
     <groupId>org.xwiki.commons</groupId>
     <artifactId>xwiki-commons-pom</artifactId>
-    <version>6.2.5</version>
+    <version>7.1-milestone-1</version>
   </parent>
   <groupId>org.xwiki.contrib</groupId>
   <artifactId>application-ckeditor-pom</artifactId>
