XWIKI-12197: Introduce a filtering system on Flavor Manager.

--- a/xwiki-platform-core/xwiki-platform-flavor/xwiki-platform-flavor-api/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-flavor/xwiki-platform-flavor-api/pom.xml
@@ -46,5 +46,10 @@
       <artifactId>xwiki-platform-repository-server-api</artifactId>
       <version>${project.version}</version>
     </dependency>
+    <dependency>
+      <groupId>org.xwiki.platform</groupId>
+      <artifactId>xwiki-platform-oldcore</artifactId>
+      <version>${project.version}</version>
+    </dependency>
   </dependencies>
 </project>
