XWIKI-12171: Add a script right to manage script macro execution permissions - Included the new right in the rights management UI in Administration

--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
@@ -1816,6 +1816,7 @@ rightsmanager.groupsorusers=Groups or Users
 rightsmanager.admin=Admin
 rightsmanager.programming=Program
 rightsmanager.edit=Edit
+rightsmanager.script=Script
 rightsmanager.view=View
 rightsmanager.delete=Delete
 rightsmanager.register=Register
