--- a/xwiki-platform-core/xwiki-platform-model/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-model/pom.xml
@@ -69,4 +69,18 @@
       <artifactId>commons-collections</artifactId>
     </dependency>
   </dependencies>
+  <build>
+    <plugins>
+      <!-- Apply the Checkstyle configurations defined in the top level pom.xml file -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-checkstyle-plugin</artifactId>
+        <configuration>
+          <excludes>
+            org/xwiki/model/reference/EntityReferenceSet.java
+          </excludes>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 </project>
