--- a/xwiki-platform-core/xwiki-platform-filter/xwiki-platform-filter-streams/xwiki-platform-filter-stream-xar/src/test/resources/packagefile/xarextension1/package.xml
+++ b/xwiki-platform-core/xwiki-platform-filter/xwiki-platform-filter-streams/xwiki-platform-filter-stream-xar/src/test/resources/packagefile/xarextension1/package.xml
@@ -11,6 +11,7 @@
     <extensionId>test</extensionId>
   </infos>
   <files>
+    <file defaultAction="0" language="">space.nestedspace.page</file>
     <file defaultAction="0" language="">space.page</file>
   </files>
 </package>
