--- a/xwiki-platform-core/xwiki-platform-job/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-job/pom.xml
@@ -32,6 +32,7 @@
   <packaging>pom</packaging>
   <description>XWiki Platform - Job - Parent POM</description>
   <modules>
+    <module>xwiki-platform-job-script</module>
     <module>xwiki-platform-job-webjar</module>
   </modules>
 </project>
