--- a/xwiki-platform-core/xwiki-platform-job/xwiki-platform-job-script/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-job/xwiki-platform-job-script/pom.xml
@@ -24,64 +24,26 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.xwiki.platform</groupId>
-    <artifactId>xwiki-platform-extension</artifactId>
+    <artifactId>xwiki-platform-job</artifactId>
     <version>7.2-SNAPSHOT</version>
   </parent>
-  <artifactId>xwiki-platform-extension-script</artifactId>
-  <name>XWiki Platform - Extension - Script</name>
+  <artifactId>xwiki-platform-job-script</artifactId>
+  <name>XWiki Platform - Job - Script</name>
   <packaging>jar</packaging>
-  <description>XWiki Platform - Extension - Script</description>
+  <description>XWiki Platform - Job - Script</description>
   <properties>
-    <xwiki.jacoco.instructionRatio>0.25</xwiki.jacoco.instructionRatio>
+    <xwiki.jacoco.instructionRatio>0.00</xwiki.jacoco.instructionRatio>
   </properties>
   <dependencies>
     <dependency>
       <groupId>org.xwiki.commons</groupId>
-      <artifactId>xwiki-commons-extension-api</artifactId>
+      <artifactId>xwiki-commons-job</artifactId>
       <version>${commons.version}</version>
     </dependency>
     <dependency>
       <groupId>org.xwiki.platform</groupId>
-      <artifactId>xwiki-platform-job-script</artifactId>
+      <artifactId>xwiki-platform-security-api</artifactId>
       <version>${project.version}</version>
-    </dependency>
-    <!-- Scripting -->
-    <dependency>
-      <groupId>org.xwiki.platform</groupId>
-      <artifactId>xwiki-platform-oldcore</artifactId>
-      <version>${project.version}</version>
-    </dependency>
-    <!-- Test dependencies -->
-    <dependency>
-      <groupId>org.xwiki.commons</groupId>
-      <artifactId>xwiki-commons-extension-api</artifactId>
-      <version>${commons.version}</version>
-      <type>test-jar</type>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.xwiki.commons</groupId>
-      <artifactId>xwiki-commons-logging-logback</artifactId>
-      <version>${commons.version}</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.xwiki.platform</groupId>
-      <artifactId>xwiki-platform-oldcore</artifactId>
-      <version>${project.version}</version>
-      <type>test-jar</type>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>javax.servlet</groupId>
-      <artifactId>javax.servlet-api</artifactId>
-      <scope>test</scope>
-    </dependency>
-    <!-- Used to mock XWiki class -->
-    <dependency>
-      <groupId>org.jmock</groupId>
-      <artifactId>jmock-legacy</artifactId>
-      <scope>test</scope>
     </dependency>
   </dependencies>
   <build>
@@ -90,12 +52,6 @@
         <!-- Apply the Checkstyle configurations defined in the top level pom.xml file -->
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-checkstyle-plugin</artifactId>
-        <configuration>
-          <excludes>
-            <!-- Fan-Out complexity -->
-            **/ExtensionManagerScriptService.java
-          </excludes>
-        </configuration>
       </plugin>
     </plugins>
   </build>
