--- a/xwiki-platform-core/xwiki-platform-rest/xwiki-platform-rest-api/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-rest/xwiki-platform-rest-api/pom.xml
@@ -46,6 +46,11 @@
       <artifactId>xwiki-platform-rest-model</artifactId>
       <version>${project.version}</version>
     </dependency>
+    <dependency>
+      <groupId>org.xwiki.platform</groupId>
+      <artifactId>xwiki-platform-rest-model</artifactId>
+      <version>7.0-SNAPSHOT</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
