--- a/xwiki-platform-core/xwiki-platform-oldcore/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-oldcore/pom.xml
@@ -268,6 +268,13 @@
       </exclusions>
     </dependency>
 
+    <!-- HTML Export/PDF Export -->
+    <dependency>
+      <groupId>org.xwiki.platform</groupId>
+      <artifactId>xwiki-platform-url-scheme-filesystem</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+
     <!-- PDF export, image processing -->
     <dependency>
       <groupId>org.apache.xmlgraphics</groupId>
