XWIKI-12281: Add ability to change the URL Scheme at runtime XWIKI-12282: Add a "Filesystem" URL Scheme for exports XWIKI-12269: Webjars resources are not bundled in the HTML export

--- a/xwiki-platform-core/xwiki-platform-url/xwiki-platform-url-schemes/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-url/xwiki-platform-url-schemes/pom.xml
@@ -33,6 +33,7 @@
   <description>XWiki Platform - URL - Schemes - Parent POM</description>
   <modules>
     <!-- Sorted Alphabetically -->
+    <module>xwiki-platform-url-scheme-filesystem</module>
     <module>xwiki-platform-url-scheme-reference</module>
     <module>xwiki-platform-url-scheme-standard</module>
   </modules>
