--- a/xwiki-platform-core/pom.xml
+++ b/xwiki-platform-core/pom.xml
@@ -485,6 +485,24 @@
               <to>org.xwiki.script.internal.safe.ScriptSafeProvider</to>
               <justification>ScriptSafeProvider has been moved to xwiki-commons-script</justification>
             </difference>
+            <difference>
+              <differenceType>7002</differenceType>
+              <className>com/xpn/xwiki/web/ExportURLFactory</className>
+              <method>com.xpn.xwiki.web.ExportURLFactoryContext getExportURLFactoryContext()</method>
+              <justification>getExportURLFactoryContext() was unstable (young API). ExportURLFactoryContext been renamed to FilesystemExportContext and moved to the Filesystem URL scheme module</justification>
+            </difference>
+            <difference>
+              <differenceType>8001</differenceType>
+              <className>com/xpn/xwiki/web/ExportURLFactoryContext</className>
+              <justification>ExportURLFactoryContext was unstable (young API). ExportURLFactoryContext been renamed to FilesystemExportContext and moved to the Filesystem URL scheme module</justification>
+            </difference>
+            <difference>
+              <differenceType>7005</differenceType>
+              <className>com/xpn/xwiki/web/ExportURLFactoryActionHandler</className>
+              <method>java.net.URL createURL*</method>
+              <to>java.net.URL createURL*</to>
+              <justification>ExportURLFactoryActionHandler was unstable (young API). ExportURLFactoryContext been renamed to FilesystemExportContext and moved to the Filesystem URL scheme module</justification>
+            </difference>
           </ignored>
           <excludes>
             <exclude>**/internal/**</exclude>
