--- a/xwiki-platform-core/pom.xml
+++ b/xwiki-platform-core/pom.xml
@@ -447,7 +447,7 @@
                 IRC Bot application in a subwiki</justification>
             </difference>
 
-             See http://mojo.codehaus.org/clirr-maven-plugin/examples/ignored-differences.html
+             See http://www.mojohaus.org/clirr-maven-plugin/examples/ignored-differences.html
           -->
           <ignored>
             <!-- Remove the following ignores after we release the current version as final -->
