--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
@@ -712,25 +712,24 @@ core.shortcuts.edit.saveandview=Alt+S
 ### Create
 core.create.pageTitle=Create Page
 core.create.newPageTitle=Create Page: {0}
-core.create.spaceTitle=Create Space
-core.create.space=Space Name
-core.create.space.hint=Name of the new space
-core.create.space.template.hint=Template to use for the homepage of the new space
-core.create.space.template.empty=Blank Homepage
-core.create.page.space.hint=Containing space for the new page
 core.create.page=Page Name
 core.create.page.hint=Name of the new page
-core.create.page.template.empty=Empty Wiki Page
 core.create.pageText=NewPage
 core.create.template=Template
 core.create.page.template.hint=Template to use for the new page
-core.create.template.allowedspaces=Pages created from the template [{0}] must be created in on of the following space: {1} 
+core.create.page.template.empty=Empty Wiki Page
+core.create.template.allowedspaces=Pages created from the template [{0}] must be created in one of the following spaces: {1}
 core.create.template.allowedspace=Pages created from the template [{0}] must be created in the space: {1}
 core.create.template.allowedspaces.inline=Allowed spaces for ''{0}'': {1} 
 core.create.template.allowedspace.inline=Allowed space for ''{0}'': {1}
 core.create.ajax.error=An error occurred, please refresh the page and try again
 core.create.page.error.docalreadyexists=The page <a href="{1}">{0}</a> already exists. You can fill in a new page name (or <a href="{2}">edit {0}</a>).
 core.create.space.error.docalreadyexists=The space {0} already exists. Please fill in a new space name.
+core.create.spaceReference.label=Location
+core.create.spaceReference.hint=The location in the page hierarchy where this new page will be created. Leave empty for top level page.
+core.create.terminal.label=Terminal Page
+core.create.terminal.hint=Advanced: Create a terminal page instead. This type of page will not be able to have children and is generally used in applications, development or in older versions of XWiki.
+core.create.terminal.status=This is a terminal page
 
 ### Rename
 core.rename.title = Rename <a href="{1}">{0}</a> 
@@ -4947,6 +4946,18 @@ core.viewers.diff.metadata.language=Language
 core.viewers.diff.metadata.name=Name
 core.viewers.diff.metadata.web=Space
 core.viewers.diff.metadata.space=Space
+
+#######################################
+## until 7.2M1
+#######################################
+
+### Create UI
+core.create.spaceTitle=Create Space
+core.create.space=Space Name
+core.create.space.hint=Name of the new space
+core.create.space.template.hint=Template to use for the homepage of the new space
+core.create.space.template.empty=Blank Homepage
+core.create.page.space.hint=Containing space for the new page
 
 ## Used to indicate where deprecated keys end
 #@deprecatedend
