XWIKI-12206: Add the support of nested spaces in the REST API.
* Create a component to generate REST URL from EntityReference
** Supports DocumentReference and SpaceReference only for now

--- a/xwiki-platform-core/xwiki-platform-rest/xwiki-platform-rest-api/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-rest/xwiki-platform-rest-api/pom.xml
@@ -46,6 +46,16 @@
       <artifactId>xwiki-platform-rest-model</artifactId>
       <version>${project.version}</version>
     </dependency>
+    <dependency>
+      <groupId>org.xwiki.platform</groupId>
+      <artifactId>xwiki-platform-model</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.xwiki.commons</groupId>
+      <artifactId>xwiki-commons-component-api</artifactId>
+      <version>${commons.version}</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
