[misc] Fix dependency
(cherry picked from commit 6e37f5af07ffa4fc1340ec7489ec90554971be3f)

--- a/xwiki-platform-core/xwiki-platform-cache/xwiki-platform-cache-oscache/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-cache/xwiki-platform-cache-oscache/pom.xml
@@ -49,9 +49,9 @@
       <version>${project.version}</version>
     </dependency>
     <dependency>
-      <groupId>org.xwiki.platform</groupId>
-      <artifactId>xwiki-platform-container-api</artifactId>
-      <version>${project.version}</version>
+      <groupId>org.xwiki.commons</groupId>
+      <artifactId>xwiki-commons-environment-api</artifactId>
+      <version>${commons.version}</version>
     </dependency>
     <dependency>
       <groupId>opensymphony</groupId>
