--- a/xwiki-platform-core/xwiki-platform-scheduler/xwiki-platform-scheduler-test/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-scheduler/xwiki-platform-scheduler-test/pom.xml
@@ -24,23 +24,21 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.xwiki.platform</groupId>
-    <artifactId>xwiki-platform-core</artifactId>
+    <artifactId>xwiki-platform-scheduler</artifactId>
     <version>7.2-SNAPSHOT</version>
   </parent>
-  <artifactId>xwiki-platform-scheduler</artifactId>
-  <name>XWiki Platform - Scheduler - Parent POM</name>
+  <artifactId>xwiki-platform-scheduler-test</artifactId>
+  <name>XWiki Platform - Scheduler - Tests - Parent POM</name>
   <packaging>pom</packaging>
-  <description>XWiki Platform - Scheduler - Parent POM</description>
+  <description>XWiki Platform - Scheduler - Tests - Parent POM</description>
+  <properties>
+    <!-- Don't run CLIRR in test modules since we don't care about backward compatibility for tests -->
+    <xwiki.clirr.skip>true</xwiki.clirr.skip>
+    <!-- Don't run Checkstyle in test modules -->
+    <xwiki.checkstyle.skip>true</xwiki.checkstyle.skip>
+  </properties>
   <modules>
-    <module>xwiki-platform-scheduler-api</module>
-    <module>xwiki-platform-scheduler-ui</module>
+    <module>xwiki-platform-scheduler-test-pageobjects</module>
+    <module>xwiki-platform-scheduler-test-tests</module>
   </modules>
-  <profiles>
-    <profile>
-      <id>integration-tests</id>
-      <modules>
-        <module>xwiki-platform-scheduler-test</module>
-      </modules>
-    </profile>
-  </profiles>
 </project>
