--- a/xwiki-platform-core/xwiki-platform-scheduler/xwiki-platform-scheduler-test/xwiki-platform-scheduler-test-pageobjects/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-scheduler/xwiki-platform-scheduler-test/xwiki-platform-scheduler-test-pageobjects/pom.xml
@@ -24,13 +24,13 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.xwiki.platform</groupId>
-    <artifactId>xwiki-platform-scheduler</artifactId>
+    <artifactId>xwiki-platform-scheduler-test</artifactId>
     <version>7.2-SNAPSHOT</version>
   </parent>
   <artifactId>xwiki-platform-scheduler-test-pageobjects</artifactId>
-  <name>XWiki Platform - Scheduler - Page Objects</name>
+  <name>XWiki Platform - Scheduler - Tests - Page Objects</name>
   <packaging>jar</packaging>
-  <description>XWiki Platform - Scheduler - Page Objects</description>
+  <description>XWiki Platform - Scheduler - Tests - Page Objects</description>
   <properties>
     <!-- None of the classes is valid -->
     <xwiki.checkstyle.skip>true</xwiki.checkstyle.skip>
