XWIKI-12274: Upgrade to Tika 1.9 * Exclude junit compile time dep wrongly brought transitively

--- a/xwiki-platform-core/pom.xml
+++ b/xwiki-platform-core/pom.xml
@@ -120,6 +120,10 @@
             <artifactId>regexp</artifactId>
             <groupId>regexp</groupId>
           </exclusion>
+          <exclusion>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+          </exclusion>
         </exclusions>
       </dependency>
       <!-- See the explanation in the tika-parsers exclusion above -->
