--- a/pom.xml
+++ b/pom.xml
@@ -158,7 +158,7 @@
           <dependency>
             <groupId>org.xwiki.commons</groupId>
             <artifactId>xwiki-commons-tool-test-simple</artifactId>
-            <version>${project.version}</version>
+            <version>${commons.version}</version>
           </dependency>
         </dependencies>
       </plugin>
