--- a/xwiki-platform-core/pom.xml
+++ b/xwiki-platform-core/pom.xml
@@ -120,6 +120,7 @@
             <artifactId>regexp</artifactId>
             <groupId>regexp</groupId>
           </exclusion>
+          <!-- TODO: Remove when https://issues.apache.org/jira/browse/TIKA-1695 is fixed. -->
           <exclusion>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
