--- a/pom.xml
+++ b/pom.xml
@@ -47,9 +47,10 @@
   <description>XWiki Platform - Parent POM</description>
   <properties>
     <!-- Useful for external Maven projects that extend the Platform POM. Must not be used by Platform project! -->
-    <platform.version>${commons.version}</platform.version>
+    <!-- Note: The packager plugin uses this property when building the war of the test instance. -->
+    <platform.version>${project.version}</platform.version>
     <!-- Versions of XWiki dependencies used in Platform modules -->
-    <rendering.version>${platform.version}</rendering.version>
+    <rendering.version>${commons.version}</rendering.version>
     <!-- Version of HSQLDB that we use in Platform when import XARs for creating functional test environments -->
     <hsqldb.version>2.3.1</hsqldb.version>
     <!-- By default check that unit tests don't output anything to the console -->
