--- a/xwiki-platform-core/xwiki-platform-query/xwiki-platform-query-manager/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-query/xwiki-platform-query-manager/pom.xml
@@ -44,8 +44,18 @@
       <version>${project.version}</version>
     </dependency>
     <dependency>
+      <groupId>org.xwiki.platform</groupId>
+      <artifactId>xwiki-platform-security-api</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
       <groupId>commons-collections</groupId>
       <artifactId>commons-collections</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.github.jsqlparser</groupId>
+      <artifactId>jsqlparser</artifactId>
+      <version>0.9.3</version>
     </dependency>
   </dependencies>
 </project>
