--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-themes/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-themes/pom.xml
@@ -27,18 +27,19 @@
     <artifactId>xwiki-platform-flamingo</artifactId>
     <version>7.2-SNAPSHOT</version>
   </parent>
-  <artifactId>xwiki-platform-flamingo-test</artifactId>
-  <name>XWiki Platform - Flamingo - Test - Parent POM</name>
+  <artifactId>xwiki-platform-flamingo-themes</artifactId>
+  <name>XWiki Platform - Flamingo - Themes - Parent POM</name>
   <packaging>pom</packaging>
-  <description>XWiki Platform - Flamingo - Test - Parent POM</description>
-  <properties>
-    <!-- Don't run CLIRR in test modules since we don't care about backward compatibility for tests -->
-    <xwiki.clirr.skip>true</xwiki.clirr.skip>
-    <!-- Don't run Checkstyle in test modules -->
-    <xwiki.checkstyle.skip>true</xwiki.checkstyle.skip>
-  </properties>
   <modules>
-    <module>xwiki-platform-flamingo-test-pageobjects</module>
-    <module>xwiki-platform-flamingo-test-tests</module>
+    <module>xwiki-platform-flamingo-theme-bootswatch</module>
+    <module>xwiki-platform-flamingo-theme-ui</module>
   </modules>
+  <profiles>
+    <profile>
+      <id>integration-tests</id>
+      <modules>
+        <module>xwiki-platform-flamingo-theme-test</module>
+      </modules>
+    </profile>
+  </profiles>
 </project>
