--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-themes/xwiki-platform-flamingo-theme-test/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-themes/xwiki-platform-flamingo-theme-test/pom.xml
@@ -24,15 +24,21 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.xwiki.platform</groupId>
-    <artifactId>xwiki-platform-core</artifactId>
+    <artifactId>xwiki-platform-flamingo-themes</artifactId>
     <version>7.2-SNAPSHOT</version>
   </parent>
-  <artifactId>xwiki-platform-flamingo</artifactId>
-  <name>XWiki Platform - Flamingo - Parent POM</name>
+  <artifactId>xwiki-platform-flamingo-theme-test</artifactId>
+  <name>XWiki Platform - Flamingo - Theme - Test - Parent POM</name>
   <packaging>pom</packaging>
-  <description>Modules related to the Flamingo Skin</description>
+  <description>XWiki Platform - Flamingo - Theme - Test - Parent POM</description>
+  <properties>
+    <!-- Don't run CLIRR in test modules since we don't care about backward compatibility for tests -->
+    <xwiki.clirr.skip>true</xwiki.clirr.skip>
+    <!-- Don't run Checkstyle in test modules -->
+    <xwiki.checkstyle.skip>true</xwiki.checkstyle.skip>
+  </properties>
   <modules>
-    <module>xwiki-platform-flamingo-skin</module>
-    <module>xwiki-platform-flamingo-themes</module>
+    <module>xwiki-platform-flamingo-theme-test-pageobjects</module>
+    <module>xwiki-platform-flamingo-theme-test-tests</module>
   </modules>
 </project>
