--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-themes/xwiki-platform-flamingo-theme-test/xwiki-platform-flamingo-theme-test-pageobjects/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-themes/xwiki-platform-flamingo-theme-test/xwiki-platform-flamingo-theme-test-pageobjects/pom.xml
@@ -24,13 +24,13 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.xwiki.platform</groupId>
-    <artifactId>xwiki-platform-flamingo-test</artifactId>
+    <artifactId>xwiki-platform-flamingo-theme-test</artifactId>
     <version>7.2-SNAPSHOT</version>
   </parent>
-  <artifactId>xwiki-platform-flamingo-test-pageobjects</artifactId>
-  <name>XWiki Platform - Flamingo - Test - Page Objects</name>
+  <artifactId>xwiki-platform-flamingo-theme-test-pageobjects</artifactId>
+  <name>XWiki Platform - Flamingo - Theme - Test - Page Objects</name>
   <packaging>jar</packaging>
-  <description>XWiki Platform - Flamingo - Test - Page Objects</description>
+  <description>XWiki Platform - Flamingo - Theme - Test - Page Objects</description>
   <dependencies>
     <dependency>
       <groupId>org.xwiki.platform</groupId>
