--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-themes/xwiki-platform-flamingo-theme-test/xwiki-platform-flamingo-theme-test-tests/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-themes/xwiki-platform-flamingo-theme-test/xwiki-platform-flamingo-theme-test-tests/pom.xml
@@ -24,15 +24,15 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.xwiki.platform</groupId>
-    <artifactId>xwiki-platform-flamingo-test</artifactId>
+    <artifactId>xwiki-platform-flamingo-theme-test</artifactId>
     <version>7.2-SNAPSHOT</version>
   </parent>
-  <artifactId>xwiki-platform-flamingo-test-tests</artifactId>
-  <name>XWiki Platform - Flamingo - Test - Functional Tests</name>
+  <artifactId>xwiki-platform-flamingo-theme-test-tests</artifactId>
+  <name>XWiki Platform - Flamingo - Theme - Test - Functional Tests</name>
   <!-- TODO: Move to use "functional-test" in the future when http://jira.codehaus.org/browse/MNG-1911 is fixed,
        see http://jira.xwiki.org/jira/browse/XWIKI-7683 -->
   <packaging>jar</packaging>
-  <description>XWiki Platform - Flamingo - Test - Functional Tests</description>
+  <description>XWiki Platform - Flamingo - Theme - Test - Functional Tests</description>
   <properties>
     <!-- TODO: Remove once http://jira.xwiki.org/jira/browse/XWIKI-7581 is fixed -->
     <xwikiCfgSuperadminPassword>pass</xwikiCfgSuperadminPassword>
@@ -42,7 +42,7 @@
   <dependencies>
     <dependency>
       <groupId>org.xwiki.platform</groupId>
-      <artifactId>xwiki-platform-flamingo-theme</artifactId>
+      <artifactId>xwiki-platform-flamingo-theme-ui</artifactId>
       <version>${project.version}</version>
       <type>xar</type>
     </dependency>
