--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-themes/xwiki-platform-flamingo-theme-ui/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-themes/xwiki-platform-flamingo-theme-ui/pom.xml
@@ -25,17 +25,19 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <artifactId>xwiki-platform-flamingo</artifactId>
     <groupId>org.xwiki.platform</groupId>
+    <artifactId>xwiki-platform-flamingo-themes</artifactId>
     <version>7.2-SNAPSHOT</version>
   </parent>
-  <artifactId>xwiki-platform-flamingo-theme</artifactId>
+  <artifactId>xwiki-platform-flamingo-theme-ui</artifactId>
   <packaging>xar</packaging>
-  <name>XWiki Platform - Flamingo - Theme</name>
-  <description>Visually customize any Flamingo-based skin and preview the results live.</description>
+  <name>XWiki Platform - Flamingo - Theme - UI</name>
+  <description>Visually customize any Flamingo-based skin and preview the results live + Default Themes</description>
   <properties>
     <!-- Name to display by the Extension Manager -->
     <xwiki.extension.name>Flamingo Theme Application</xwiki.extension.name>
+    <!-- Old names of this module used for retro compatibility when resolving dependencies of old extensions -->
+    <xwiki.extension.features>org.xwiki.platform:xwiki-platform-flamingo-theme</xwiki.extension.features>
   </properties>
   <dependencies>
     <dependency>
