--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-test/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/xwiki-platform-flamingo-skin-test/pom.xml
@@ -24,23 +24,20 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.xwiki.platform</groupId>
-    <artifactId>xwiki-platform-flamingo</artifactId>
+    <artifactId>xwiki-platform-flamingo-skin</artifactId>
     <version>7.2-SNAPSHOT</version>
   </parent>
-  <artifactId>xwiki-platform-flamingo-themes</artifactId>
-  <name>XWiki Platform - Flamingo - Themes - Parent POM</name>
+  <artifactId>xwiki-platform-flamingo-skin-test</artifactId>
+  <name>XWiki Platform - Flamingo - Skin - Test - Parent POM</name>
   <packaging>pom</packaging>
-  <description>XWiki Platform - Flamingo - Themes - Parent POM</description>
+  <description>XWiki Platform - Flamingo - Skin - Test - Parent POM</description>
+  <properties>
+    <!-- Don't run CLIRR in test modules since we don't care about backward compatibility for tests -->
+    <xwiki.clirr.skip>true</xwiki.clirr.skip>
+    <!-- Don't run Checkstyle in test modules -->
+    <xwiki.checkstyle.skip>true</xwiki.checkstyle.skip>
+  </properties>
   <modules>
-    <module>xwiki-platform-flamingo-theme-bootswatch</module>
-    <module>xwiki-platform-flamingo-theme-ui</module>
+    <module>xwiki-platform-flamingo-skin-test-tests</module>
   </modules>
-  <profiles>
-    <profile>
-      <id>integration-tests</id>
-      <modules>
-        <module>xwiki-platform-flamingo-theme-test</module>
-      </modules>
-    </profile>
-  </profiles>
 </project>
