[Misc] Move the CreatePageTest out of xwiki-enterprise and into xwiki-platform * Added the first skin level functional test (what was in CreatePageTest not related to Templates + added some more stuff) * Start introducing Entity References in the Functional Test framework * Fix the Template tests so that they work after the Nested Spaces changes (especially the breadcrumb change) * Fix some PO that were returning a WYSIWYGEditPage when they should have returned an EditPage (since WYSIWYG is optional) * Moved pages related to Templates that were in xwiki-enterprise but that should  have been in xwiki-platform. FTM I've put them in the administration module but they should go elsewhere, see XWIKI-12386

--- a/xwiki-platform-core/xwiki-platform-test/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-test/pom.xml
@@ -38,6 +38,11 @@
       <version>${commons.version}</version>
     </dependency>
     <dependency>
+      <groupId>org.xwiki.platform</groupId>
+      <artifactId>xwiki-platform-model</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
       <groupId>commons-httpclient</groupId>
       <artifactId>commons-httpclient</artifactId>
     </dependency>
