--- a/xwiki-platform-core/xwiki-platform-search/xwiki-platform-search-solr/xwiki-platform-search-solr-api/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-search/xwiki-platform-search-solr/xwiki-platform-search-solr-api/pom.xml
@@ -29,6 +29,7 @@
   </parent>
   <artifactId>xwiki-platform-search-solr-api</artifactId>
   <name>XWiki Platform - Search - Solr - API</name>
+  <packaging>jar</packaging>
   <description>Solr engine management: configuration, indexing, listeners, script service, etc. This module does not handle the search queries</description>
   <properties>
     <!-- Name to display by the Extension Manager -->
