--- a/xwiki-platform-core/xwiki-platform-search/xwiki-platform-search-solr/xwiki-platform-search-solr-server/xwiki-platform-search-solr-server-data/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-search/xwiki-platform-search-solr/xwiki-platform-search-solr-server/xwiki-platform-search-solr-server-data/pom.xml
@@ -37,14 +37,17 @@
   </properties>
   <dependencies>
     <dependency>
-      <!-- This is needed at runtime by solrconfig.xml. -->
+      <!-- This is needed at runtime by solrconfig.xml which is why we package below in the lib/ directory of the
+           generatd JAR which will be used and transformed into a zip file in the xwiki-platform-search-solr-api
+           module. -->
       <groupId>org.xwiki.platform</groupId>
       <artifactId>xwiki-platform-search-solr-server-plugin</artifactId>
       <version>${project.version}</version>
+      <!-- We use "runtime" so that this dep is not used transitively by Maven and thus doesn't find its way into
+           our distirbution's WEB-INF/lib directory. -->
       <scope>provided</scope>
     </dependency>
   </dependencies>
-
   <build>
     <plugins>
       <!-- Add the plugin to the lib/ -->
